opam-version: "2.0"
version: "4.10.0+trunk"
synopsis: "OCaml 4.10.0 + Flambda + statmemprof for first stage Flambda 2.0 build"
depends: [
  "ocaml" {= "4.10.0" & post}
  "base-unix" {post}
  "base-bigarray" {post}
  "base-threads" {post}
]
conflict-class: "ocaml-core-compiler"
flags: compiler
setenv: CAML_LD_LIBRARY_PATH = "%{lib}%/stublibs"
build: [
  ["./configure" "--prefix=%{prefix}%" "--enable-flambda"]
  [make "-j%{jobs}%"]
]
install: [make "install"]
maintainer: "mshinwell@gmail.com"
homepage: "https://github.com/ocaml/ocaml/"
bug-reports: "https://github.com/ocaml/ocaml/issues"
authors: [
  "Xavier Leroy"
  "Damien Doligez"
  "Alain Frisch"
  "Jacques Garrigue"
  "Didier Rémy"
  "Jérôme Vouillon"
]
